--- a/ProjectUDN.uproject
+++ b/ProjectUDN.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.1",
+	"EngineAssociation": "{36D6124E-4D65-0932-C6D6-0AA5595D128E}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
